@@ -42,7 +42,7 @@ PluginWidget::ResultAction PluginWidget::saveSettings()
     pdb->set_engine_path("python3.4", ui.editPathPy3->text());
 
 
-    // handle the 3 assignable plugin buttons
+    // handle the 5 assignable plugin buttons
     QHash<QString, Plugin*> plugins = pdb->all_plugins();
     QStringList keys = plugins.keys();
     keys.sort();
@@ -51,6 +51,8 @@ PluginWidget::ResultAction PluginWidget::saveSettings()
     pnames.append(ui.comboBox->currentText());
     pnames.append(ui.comboBox_2->currentText());
     pnames.append(ui.comboBox_3->currentText());
+    pnames.append(ui.comboBox_4->currentText());
+    pnames.append(ui.comboBox_5->currentText());
     foreach (QString pname, pnames) {
         if (keys.contains(pname)) {
             pluginmap.append(pname);
@@ -118,10 +120,12 @@ void PluginWidget::readSettings()
 
     ui.pluginTable->resizeColumnsToContents();
 
-    // handle the 3 assignable plugin buttons
+    // handle the 5 assignable plugin buttons
     ui.comboBox->clear();
     ui.comboBox_2->clear();
     ui.comboBox_3->clear();
+    ui.comboBox_4->clear();
+    ui.comboBox_5->clear();
 
     QStringList keys = plugins.keys();
     keys.sort();
@@ -130,21 +134,29 @@ void PluginWidget::readSettings()
     ui.comboBox->addItems(items);
     ui.comboBox_2->addItems(items);
     ui.comboBox_3->addItems(items);
+    ui.comboBox_4->addItems(items);
+    ui.comboBox_5->addItems(items);
 
     ui.comboBox->setCurrentIndex(0);
     ui.comboBox_2->setCurrentIndex(0);
     ui.comboBox_3->setCurrentIndex(0);
+    ui.comboBox_4->setCurrentIndex(0);
+    ui.comboBox_5->setCurrentIndex(0);
 
     QStringList pluginmap = settings.pluginMap();
     // prevent segfaults from corrupted settings files
-    while (pluginmap.count() < 3) pluginmap.append(QString(""));
+    while (pluginmap.count() < 5) pluginmap.append(QString(""));
     int t1 = ui.comboBox->findText(pluginmap.at(0));
     int t2 = ui.comboBox_2->findText(pluginmap.at(1));
     int t3 = ui.comboBox_3->findText(pluginmap.at(2));
+    int t4 = ui.comboBox_4->findText(pluginmap.at(3));
+    int t5 = ui.comboBox_5->findText(pluginmap.at(4));
 
     ui.comboBox->setCurrentIndex(t1);
     ui.comboBox_2->setCurrentIndex(t2);
     ui.comboBox_3->setCurrentIndex(t3);
+    ui.comboBox_4->setCurrentIndex(t4);
+    ui.comboBox_5->setCurrentIndex(t5);
 
     // If the python bundled interpreter is present/ready, enable the checkbox and set it
     // based on the value of the SettingStore Value. Otherwise keep it disabled.
@@ -222,6 +234,8 @@ void PluginWidget::addPlugin()
     ui.comboBox->addItem(pluginname);
     ui.comboBox_2->addItem(pluginname);
     ui.comboBox_3->addItem(pluginname);
+    ui.comboBox_4->addItem(pluginname);
+    ui.comboBox_5->addItem(pluginname);
     ui.pluginTable->setSortingEnabled(true);
 }
 
@@ -250,13 +264,17 @@ void PluginWidget::removePlugin()
     QString val1 = ui.comboBox->currentText();
     QString val2 = ui.comboBox_2->currentText();
     QString val3 = ui.comboBox_3->currentText();
+    QString val4 = ui.comboBox_4->currentText();
+    QString val5 = ui.comboBox_5->currentText();
 
-    // all 3 have the identical lists
+    // all 5 have the identical lists
     int item_to_remove = ui.comboBox->findText(pluginname);
     if (item_to_remove > -1) {
         ui.comboBox->removeItem(item_to_remove);
         ui.comboBox_2->removeItem(item_to_remove);
         ui.comboBox_3->removeItem(item_to_remove);
+        ui.comboBox_4->removeItem(item_to_remove);
+        ui.comboBox_5->removeItem(item_to_remove);
     }
     int target;
     target = ui.comboBox->findText(val1);
@@ -267,6 +285,12 @@ void PluginWidget::removePlugin()
 
     target = ui.comboBox_3->findText(val3);
     ui.comboBox_3->setCurrentIndex(target);
+
+    target = ui.comboBox_4->findText(val4);
+    ui.comboBox_4->setCurrentIndex(target);
+
+    target = ui.comboBox_5->findText(val5);
+    ui.comboBox_5->setCurrentIndex(target);
 
     ui.pluginTable->setSortingEnabled(true);
 
@@ -298,9 +322,13 @@ void PluginWidget::removeAllPlugins()
     ui.comboBox->clear();
     ui.comboBox_2->clear();
     ui.comboBox_3->clear();
+    ui.comboBox_4->clear();
+    ui.comboBox_5->clear();
     ui.comboBox->setCurrentIndex(-1);
     ui.comboBox_2->setCurrentIndex(-1);
     ui.comboBox_3->setCurrentIndex(-1);
+    ui.comboBox_4->setCurrentIndex(-1);
+    ui.comboBox_5->setCurrentIndex(-1);
 }
 
 
@@ -390,4 +418,6 @@ void PluginWidget::connectSignalsToSlots()
     connect(ui.comboBox, SIGNAL(currentIndexChanged(int)), this, SLOT(pluginMapChanged(int)));
     connect(ui.comboBox_2, SIGNAL(currentIndexChanged(int)), this, SLOT(pluginMapChanged(int)));
     connect(ui.comboBox_3, SIGNAL(currentIndexChanged(int)), this, SLOT(pluginMapChanged(int)));
+    connect(ui.comboBox_4, SIGNAL(currentIndexChanged(int)), this, SLOT(pluginMapChanged(int)));
+    connect(ui.comboBox_5, SIGNAL(currentIndexChanged(int)), this, SLOT(pluginMapChanged(int)));
 }
